--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
+    "vuedraggable": "^2.24.3",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
